[gd_scene load_steps=15 format=3 uid="uid://dq6gw6kdq30h2"]

[ext_resource type="Texture2D" uid="uid://bxf0rxqbalfqo" path="res://GettyImages-2166462891_WEB.webp" id="2_7m2sr"]
[ext_resource type="PackedScene" uid="uid://b588rp46wr7n0" path="res://scenes/UIBattle.tscn" id="2_f0kb1"]
[ext_resource type="Script" uid="uid://djga0vllljxhw" path="res://scripts/BattleManager.gd" id="2_n2dfx"]
[ext_resource type="Script" uid="uid://w5crfr45qebk" path="res://scripts/EnemyGrid.gd" id="3_f0kb1"]
[ext_resource type="PackedScene" uid="uid://b1jxfg32brb8x" path="res://scenes/EnemySlot.tscn" id="4_dess1"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_7m2sr"]
panorama = ExtResource("2_7m2sr")

[sub_resource type="Sky" id="Sky_dess1"]
sky_material = SubResource("PanoramaSkyMaterial_7m2sr")

[sub_resource type="Environment" id="Environment_clnqo"]
background_mode = 2
sky = SubResource("Sky_dess1")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_sky_contribution = 0.98

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_50weh"]
load_path = "res://.godot/imported/floor_stone.jpg-174f83846018e36f29e70ca2946a733a.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n2dfx"]
albedo_color = Color(0.843184, 0.843184, 0.843184, 1)
metallic_specular = 0.05
normal_scale = 15.15
normal_texture = SubResource("CompressedTexture2D_50weh")
ao_texture_channel = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8n0un"]
albedo_color = Color(0.882353, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_f0kb1"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7m2sr"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dess1"]
albedo_color = Color(0, 0, 0, 1)

[node name="ArenaDefault" type="Node3D"]
script = ExtResource("2_n2dfx")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_clnqo")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 0.1, 0, 0, 0, 2, 0, 0, -5)
size = Vector3(16, 0.1, 11)
material = SubResource("StandardMaterial3D_n2dfx")

[node name="CSGBox3D4" type="CSGBox3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 0.1, 0, 0, 0, 2, 0, 6, -5)
visible = false
size = Vector3(16, 0.1, 11)
material = SubResource("StandardMaterial3D_n2dfx")

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 1.6, 0, 3, 6)
size = Vector3(16, 3, 0.1)
material = SubResource("StandardMaterial3D_8n0un")

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 1.6, 0, 3, -16)
size = Vector3(16, 3, 0.1)
material = SubResource("StandardMaterial3D_f0kb1")

[node name="CSGBox3D5" type="CSGBox3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -16, 3, -5)
size = Vector3(0.01, 3, 11)
material = SubResource("StandardMaterial3D_7m2sr")

[node name="CSGBox3D6" type="CSGBox3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 16, 3, -5)
size = Vector3(0.01, 3, 11)
material = SubResource("StandardMaterial3D_dess1")

[node name="BattleUI" parent="." instance=ExtResource("2_f0kb1")]
offset_left = 56.0
offset_top = 61.0
offset_right = 96.0
offset_bottom = 101.0

[node name="EnemyGrid" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.342
anchor_top = 0.156
anchor_right = 0.655
anchor_bottom = 0.34
offset_left = 58.016
offset_top = -4.08801
offset_right = -302.56
offset_bottom = -123.32
script = ExtResource("3_f0kb1")

[node name="VBoxContainer" type="VBoxContainer" parent="EnemyGrid"]
layout_mode = 0
offset_top = 12.0
offset_right = 215.0
offset_bottom = 123.0

[node name="BackRow" type="HBoxContainer" parent="EnemyGrid/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FrontRow" type="HBoxContainer" parent="EnemyGrid/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="EnemySlot" parent="EnemyGrid/VBoxContainer/FrontRow" instance=ExtResource("4_dess1")]
layout_mode = 2
